# bineval

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  credits.json
.github/workflows/: ci.yml  release.yml
docs/: GUIDE.md  numeric_subset_plan.md
scripts/: ast_extractor.py
src/: main.rs
src/adapters/: cli_output.rs  credits.rs  fs_repo.rs  json_config.rs  mod.rs  python_ast.rs
src/adapters/fs/: mod.rs  primitives.rs  suites.rs
src/adapters/logging/: mod.rs  stdout_logger.rs
src/core/: credits.rs  errors.rs  mod.rs  policy.rs  ports.rs  primitive.rs  result.rs  suite.rs  template.rs
src/core/usecases/: audit.rs  mod.rs  run_suite.rs  validate.rs
src/ports/: mod.rs
suites/: numeric_referencing.json  rmcp_abac.yaml  rmcp_dlp.yaml
tests/: cli_tests.rs  integration_tests.rs
tests/fixtures/potentials/: primitive_ok.json
tests/fixtures/suites/: test_suite.json
