[package]
name = "bineval"
version = "0.1.1"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
